// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccordionSection renders correctly with required props 1`] = `

<div class="govuk-accordion__section"
     role="presentation"
>
  <div class="govuk-accordion__section-header"
       data-testid="SectionHeader Test heading"
  >
    <h2 class="govuk-accordion__section-heading">
      <button aria-expanded="false"
              class="govuk-accordion__section-button"
              type="button"
      >
        Test heading
      </button>
      <span aria-hidden="true"
            class="govuk-accordion__icon"
      >
      </span>
    </h2>
  </div>
  <div class="govuk-accordion__section-content">
    <p>
      Test content
    </p>
    <div>
      <a href="#"
         class="govuk-link govuk-link--no-visited-state"
      >
        Go to top
      </a>
    </div>
  </div>
</div>

`;

exports[`AccordionSection renders with caption 1`] = `

<div class="govuk-accordion__section"
     role="presentation"
>
  <div class="govuk-accordion__section-header"
       data-testid="SectionHeader Test heading"
  >
    <h2 class="govuk-accordion__section-heading">
      <button aria-expanded="false"
              class="govuk-accordion__section-button"
              type="button"
      >
        Test heading
      </button>
      <span aria-hidden="true"
            class="govuk-accordion__icon"
      >
      </span>
    </h2>
    <span class="govuk-accordion__section-summary">
      Some caption text
    </span>
  </div>
  <div class="govuk-accordion__section-content">
    <p>
      Test content
    </p>
    <div>
      <a href="#"
         class="govuk-link govuk-link--no-visited-state"
      >
        Go to top
      </a>
    </div>
  </div>
</div>

`;

exports[`AccordionSection renders with different heading size 1`] = `

<div class="govuk-accordion__section"
     role="presentation"
>
  <div class="govuk-accordion__section-header"
       data-testid="SectionHeader Test heading"
  >
    <h3 class="govuk-accordion__section-heading">
      <button aria-expanded="false"
              class="govuk-accordion__section-button"
              type="button"
      >
        Test heading
      </button>
      <span aria-hidden="true"
            class="govuk-accordion__icon"
      >
      </span>
    </h3>
  </div>
  <div class="govuk-accordion__section-content">
    <p>
      Test content
    </p>
    <div>
      <a href="#"
         class="govuk-link govuk-link--no-visited-state"
      >
        Go to top
      </a>
    </div>
  </div>
</div>

`;
